Add ReadInput class for user input handling and update main loop.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,8 @@
                 "./src/Control.cpp",
                 "-g",
                 "./src/ApplicationStates.cpp",
+                "-g",
+                "./src/ReadInput.cpp",
                 
                 "-L",
                 "${fileDirname}",
